# local-voice-agent

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml
agent/: __main__.py  orchestrator.py  service.py
agent/audio/: interrupt_handler.py  post_processor.py  pre_processor.py  silero_vad.py
agent/audio_capture/: vad_recorder.py
agent/connections/: websocket_handler.py
agent/llm/: gemini_client.py
agent/stt/: vibevoice_asr.py  vosk_asr.py  whisper_asr.py
agent/tts/: kokoro_tts.py  lux_tts.py  moss_tts.py  speecht5_tts.py  vits_tts.py
shared/: config.py  logging.py
tools/: pipeline_client.py  pipeline_server.py  tts_benchmark.py
