[project]
name = "local-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.34.0",
    "fastapi>=0.135.2",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers<=4.57.6",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
    "vosk>=0.3.45",
    "zipvoice @ git+https://github.com/ysharma3501/LuxTTS.git",
    "huggingface-hub[hf-xet]>=0.36.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.uv]
find-links = ["https://k2-fsa.github.io/icefall/piper_phonemize.html"]
environments = ["sys_platform == 'win32'"]
override-dependencies = ["piper-phonemize>=1.3.0"]
